--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "expo": "~51.0.13",
     "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
